# soat.eleven.kutcut.videoprocessor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: cd-deploy.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  namespace.yaml  networkpolicy.yaml  secretproviderclass.yaml  service.yaml  serviceaccount.yaml
src/: containers.py  main.py
src/modules/shared/adapters/: __init__.py  application_service_adapter.py  cache_adapter.py  database_entity_adapter.py  database_repository_adapter.py  domain_service_adapter.py  entity_adapter.py  fast_api_controller.py  infra_service_adapter.py  repository_adapter.py
src/modules/shared/adapters/blob_storage/: __init__.py  blob_storage_adapter.py
src/modules/shared/adapters/message_broker/: message_broker_adapter.py  rabbitmq_publisher.py
src/modules/shared/constants/: exceptions_constants.py
src/modules/shared/decorators/: __init__.py
src/modules/shared/decorators/fastapi/: fastapi_decorator.py
src/modules/shared/exceptions/: domain_exception.py
src/modules/shared/middlewares/: __init__.py
src/modules/shared/middlewares/http_correlation/: http_correlation_middleware.py
src/modules/shared/providers/: __init__.py  settings_provider.py
src/modules/shared/services/azure/: __init__.py
src/modules/shared/services/logger/: logger_service.py
src/modules/shared/services/message_broker/: publish_message_service.py
src/modules/shared/services/settings/: settings.py
src/modules/shared/services/video/: video_service.py
src/modules/video/controllers/: video_controller.py
src/modules/video/entities/: video_entity.py
src/modules/video/exceptions/: __init__.py  video_not_exist_exception.py
src/modules/video/models/: video_message_model.py
src/modules/video/providers/: get_video_process_application_service_provider.py
src/modules/video/services/application/: __init__.py  get_video_process_application_service.py
src/modules/video/services/domain/: __init__.py  download_video_domain_service.py  generate_snapshots_domain_service.py
src/tests/modules/video/controllers/: test_video_controller.py
(+10 files in other folders)
