[project]
name = "soat-eleven-kutcut-videoprocessor"
version = "0.1.0"
description = "Sistema processador de arquivos de vídeo em imagens."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.0.0",
    "aio-pika>=9.4.0",
    "Pillow>=11.0.0",
    "aiohttp>=3.11.0",
    "azure-storage-blob>=12.22.0",
    "fastapi[standard]>=0.128.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytomlpp>=1.1.0",
    "taskipy>=1.14.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "faker>=40.1.2",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
]

[tool.taskipy.tasks]
lint = "ruff check src --fix && black src && isort src"
run_dev = "python src/main.py"
run_worker = "python src/main.py"
test = "pytest src/tests/ -v --cov=src --cov-report=xml --cov-report=html --cov-report=term"
test_watch = "pytest src/tests/ -v --cov=src --cov-report=term --watch"
test_bdd = "pytest src/tests/ -m bdd"


[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["soat.eleven.fastfood.pagamento"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "bdd: BDD tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/main.py",
    "*/providers/*",
    "*/adapters/*",
    "*/enums/*",
    "*/dtos/*",
    "*/exceptions/*",
    "*/decorators/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
